# notebooklm-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: ci.yml
